chore: Adds jokes screen and testing for use cases

--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">The Chuck Norris App</string>
+    <string name="title_categories">Categories</string>
+    <string name="title_joke">Joke about %s</string>
 </resources>
